Implementada funcionalidad de localización por GPS y por 3G.
Signed-off-by: Flavio Corpa Ríos <flavio.corpa@energysistem.com>

--- a/EnergyUbication/res/values/strings.xml
+++ b/EnergyUbication/res/values/strings.xml
@@ -4,5 +4,13 @@
     <string name="app_name">EnergyUbication</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="ubicacion">Ubicación actual:</string>
+    <string name="activar">Activar</string>
+    <string name="desactivar">Desactivar</string>
+    <string name="proveedor_estado">Estado del proveedor:</string>
+    <string name="estado">Estado</string>
+    <string name="latitud">Latitud</string>
+    <string name="longitud">Longitud</string>
+    <string name="precision">Precisión</string>
 
 </resources>
